# CourseWork5

./: .gitignore  README.md  main.py  pyproject.toml
src/: DBManager.py  api_utils.py  bd_utils.py  config.py  queries.sql
